--- a/polo.user.css
+++ b/polo.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Polo
 @namespace      https://github.com/OzakIOne/Polo
-@version        1.1.0
+@version        1.1.1
 @description    DarkTheme for configomatic
 @author         OzakI
 ==/UserStyle== */
@@ -266,7 +266,7 @@
         color: #2979FF;
     }
     .configomatic__content--left .configomatic__combo--wrapper .configomatic__combo--toggle:hover {
-        color: #0277BD;
+        color: #2979FF;
         background-color: #202020;
     }
 
