--- a/polo.user.css
+++ b/polo.user.css
@@ -1,5 +1,5 @@
 /* ==UserStyle==
-@name           Dark Topachat Configomatic
+@name           Polo
 @namespace      ozaki
 @version        1.1.2
 @description    Dark Theme for topachat's configomatic
